--- a/docs/operational_guide/partner_editable/additional_info.adoc
+++ b/docs/operational_guide/partner_editable/additional_info.adoc
@@ -1,6 +1,6 @@
 ==== CodePipeline Steps
 
-image::../docs/deployment_guide/images/AMC-Quickstart-CodePipeline-Steps.png[AMC Quickstart CodePipeline Steps]
+image::../docs/operational_guide/images/amc-quickstart-codepipeline-steps.png[AMC Quickstart CodePipeline Steps]
 
 The Code Pipeline Steps are:
 
@@ -29,7 +29,6 @@ To hydrate the data lake and begin populating the data lake with data from your 
 _Insert TPS Records:_ To initialize the process of onboarding your AMC instance on the Amazon AD Tech platform, this notebook will walk through the steps to adds client configurations to a TPS Customer Configuration table in Amazon DynamoDB. The configuration includes your AMC Endpoint URL, AMC Bucket Name and other related information on your AMC Instance. The Tenant Provisioning Service (TPS) will then automatically:
 
 - Onboard clients using configuration which is persisted in a DynamoDB Table. It helps to reduce time to onboard new customers
-- Provide functionality to automatically enable different modules (AMC/Sponsored ADs/DSP) during the onboarding process for each client
 - Provide a centralized location to manage various clients and modules and supports multi-tenancy
 
 _Create Workflows:_ To initialize the creation, scheduling and execution of AMC workflows, this notebook will walk through the steps to add a workflow to an AMC Workflows table in Amazon DynamoDB. From there you will also invoke this workflow to execute and populate data from your AMC Instance to your AMC S3 Bucket. WFM also allows you to:
@@ -51,7 +50,7 @@ Note: As a prerequisite, you should have executed at least one Time to Conversio
 You will need author access to a QuickSight Account to get started with building your first dashboard. If you don't have a QuickSight account already, below are the steps to create one.
 
 [start=1]
-. Launch the **AWS Console** (https://console.aws.amazon.com) in a new browser tab, search for **QuickSight** and launch it.
+. Launch the https://console.aws.amazon.com[AWS Console^] in a new browser tab, search for **QuickSight** and launch it.
 . On the **QuickSight** page, click **Sign up for QuickSight** button.
 . Keep the default **Enterprise** edition, scroll down and click the **Continue** button.
 . Enter a **QuickSight account name** & **Notification email address**. Enter your official email as the notification email.
@@ -78,7 +77,7 @@ For more information, review: https://docs.aws.amazon.com/quicksight/latest/user
 . Find **Athena** in the list. Clear the box by Athena, then select it again to enable Athena. Then choose **Next**.
 . Under **S3 Bucket**, choose the S3 buckets that you want to access from Amazon QuickSight.
 
-image::../docs/deployment_guide/images/quicksight-bucket-selection.png[QuickSightBucketPermission]
+image::../docs/operational_guide/images/quicksight-bucket-selection.png[QuickSightBucketPermission]
 
 [start=5]
 . From the right column, **Write permission for Athena Workgroup**, choose the S3 buckets you could write your Athena results too.
@@ -95,7 +94,7 @@ image::../docs/deployment_guide/images/quicksight-bucket-selection.png[QuickSigh
 .. To collect user ARNs programmatically, run the following list-users command in your terminal (Linux or Mac) or at your command prompt (Windows): `aws quicksight list-users --aws-account-id 111122223333 --namespace default --region us-east-1`
 ... Note: to find your QuickSight username, click the menu in the top right portion of the page.
 
-image::../docs/deployment_guide/images/quicksight-username.png[QuickSightUsernameView]
+image::../docs/operational_guide/images/quicksight-username.png[QuickSightUsernameView]
 
 [start=2]
 . Next, Sign in to the AWS Console and navigate to AWS Lake Formation as the data lake administrator. A data lake administrator can grant any principal (IAM, QuickSight, or Active Directory) permissions to Data Catalog resources (databases and tables) or data lake locations in Amazon S3.
@@ -105,7 +104,7 @@ image::../docs/deployment_guide/images/quicksight-username.png[QuickSightUsernam
 . Select **SAML users and groups** and enter the QuickSight user ARN.
 . Then click into **Named data catalog resources**
 
-image::../docs/deployment_guide/images/lf-database-grant.png[LakeFormationDBGrant]
+image::../docs/operational_guide/images/lf-database-grant.png[LakeFormationDBGrant]
 
 [start=8]
 
@@ -151,7 +150,7 @@ This section provides details on how to create a visualization for the Time to C
 ... Choose **Validate connection** to test the connection
 ... Choose **Create data source**.
 
-image::../docs/deployment_guide/images/quicksight-athena-workgroup.png[QuickiSightAthenaWorkgroup]
+image::../docs/operational_guide/images/quicksight-athena-workgroup.png[QuickiSightAthenaWorkgroup]
 
 [start=3]
 
@@ -161,7 +160,7 @@ image::../docs/deployment_guide/images/quicksight-athena-workgroup.png[QuickiSig
 ... To choose the database and table created for the Time to Conversion use case, choose your database from the dropdown under **Database** and choose the Time to Conversion table from the **Tables** list that appears for your database.
 ... You can optionally pull the data in with a SQL query, by choosing **Use custom SQL**
 
-image::../docs/deployment_guide/images/quicksight-table-selection.png[QuickSightTableSelection]
+image::../docs/operational_guide/images/quicksight-table-selection.png[QuickSightTableSelection]
 
 [start=4]
 
@@ -170,7 +169,7 @@ image::../docs/deployment_guide/images/quicksight-table-selection.png[QuickSight
 .. In the **Fields list** pane, choose **purchases**, **time_to_conversion**, and **total_brand_purchases**.
 .. Amazon QuickSight uses AutoGraph to create the visual, selecting the visual type that it determines is most compatible with those fields. In this case, it selects a horizontal bar chart that shows the purchases and total_brand_purchases by time_to_conversion.
 
-image::../docs/deployment_guide/images/quicksight-time-to-conversion-autograph.png[QuickSightTimeToConversionAutoGraph]
+image::../docs/operational_guide/images/quicksight-time-to-conversion-autograph.png[QuickSightTimeToConversionAutoGraph]
 
 [start=6]
 . Modify the Auto Graphed visual
@@ -199,7 +198,7 @@ image::../docs/deployment_guide/images/quicksight-time-to-conversion-autograph.p
 . Use a combination of the filters to analyze the performance by time period, to identify windows with the highest conversion rates.
 .. For further information on customizing visualizations checkout: https://docs.aws.amazon.com/quicksight/latest/user/working-with-visuals.html
 
-image::../docs/deployment_guide/images/quicksight-time-to-conversion.png[QuickSightTimeToConversion]
+image::../docs/operational_guide/images/quicksight-time-to-conversion.png[QuickSightTimeToConversion]
 Vertical Bar Chart visual in Amazon QuickSight for the Purchases by Time to Conversion AMC use case
 
 
