Updated images call in files

--- a/docs/deployment_guide/partner_editable/architecture.adoc
+++ b/docs/deployment_guide/partner_editable/architecture.adoc
@@ -2,7 +2,7 @@
 
 [#architecture1]
 .Quick Start architecture for {partner-product-short-name} on AWS
-image::../docs/deployment_guide/images/architecture_diagram.png[Architecture]
+image::../docs/deployment_guide/images/architecture_diagram.png[Architecture,width=648,height=439]
 
 As shown in <<architecture1>>, the Quick Start sets up the following:
 
