--- a/docs/deployment_guide/partner_editable/post_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/post_deployment.adoc
@@ -16,7 +16,9 @@ _NOTE:_ Before running this command, look into the `Makefile` and ensure that:
 
 This command will go through the following sequence of steps in order to clean up your AWS account environment:
 
-image::../docs/deployment_guide/images/AMC-Quickstart-Delete.png[AMC-Quickstart-Delete]
+[#DeleteSteps1]
+.Quick Start Delete All Command for {partner-product-short-name}
+image::../docs/deployment_guide/images/AMC-Quickstart-Delete.png[AMC-Quickstart-Delete,width=648,height=439]
 
 Some CloudWatch General Log Groups May Remain in your Account with Logs specific to AMC Quickstart resources, including:
 
